gccida/c3/warning_with_decl
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/warning_with_decl/src/diagnostic.c:1742:48: error: expected expression
diagnostic_for_decl( decl, msgid, ( va_list_0 *)va, 1); 
                                               ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/warning_with_decl/src/diagnostic.c:1742:37: error: use of undeclared identifier 'va_list_0'
diagnostic_for_decl( decl, msgid, ( va_list_0 *)va, 1); 
                                    ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/warning_with_decl/src/obj/diagnostic.o] Error 1
